@@ -1,16 +1,16 @@
 {
-  "timestamp" : "2022-06-03T00:54:27Z",
+  "timestamp" : "2022-06-03T08:13:48Z",
   "count_outdated" : 312,
   "uniques_outdated" : 163,
-  "count" : 339,
-  "uniques" : 182,
+  "count" : 329,
+  "uniques" : 176,
   "clones" : [
     {
       "timestamp": "2022-05-20T00:00:00Z",
-      "count": 14,
-      "count_minmax": [ 10, 14 ],
-      "uniques": 10,
-      "uniques_minmax": [ 7, 10 ]
+      "count": 3,
+      "count_minmax": [ 3, 14 ],
+      "uniques": 3,
+      "uniques_minmax": [ 3, 10 ]
     },
     {
       "timestamp": "2022-05-21T00:00:00Z",
@@ -51,6 +51,13 @@
       "timestamp": "2022-06-02T00:00:00Z",
       "count": 2,
       "count_minmax": [ 1, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-06-03T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
