@@ -1,11 +1,11 @@
 {
-  "count": 27,
-  "uniques": 12,
+  "count": 17,
+  "uniques": 5,
   "clones": [
     {
       "timestamp": "2022-05-20T00:00:00Z",
-      "count": 14,
-      "uniques": 10
+      "count": 3,
+      "uniques": 3
     },
     {
       "timestamp": "2022-05-21T00:00:00Z",
@@ -35,6 +35,11 @@
     {
       "timestamp": "2022-06-02T00:00:00Z",
       "count": 2,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-06-03T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
